# VoDrop

./: .firebaserc  .gitignore  AI Developer Prompt_ VoDrop - Kotlin Multiplatform (KMP) Project Kickoff.md  Full v1 App Guide.md  Gemini 3 Hackathon Details.txt  PROJECT_CONTEXT.md  README.md  RELEASE_BUILD_TROUBLESHOOTING.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026_01_16_CLOUD_PIVOT.md  SESSION_SUMMARY_ANDROID_STT.md  SESSION_SUMMARY_STT_LLM_INTEGRATION.md  VoDrop_ Project Brief and Technical Roadmap (Final).md  package-lock.json  session_summary.md  settings.gradle.kts
.gemini/: PROJECT_CONTEXT.md  SESSION_2026-01-17_V1_IMPLEMENTATION.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026_01_16.md  SESSION_SUMMARY_2026_01_16_CLOUD_PIVOT.md  SESSION_SUMMARY_PRO_FEATURES.md  project_evolution_context.md
composeApp/: build.gradle.kts  google-services.json  proguard-rules.pro
composeApp/release/: output-metadata.json
composeApp/release/baselineProfiles/0/: composeApp-release.dm
composeApp/release/baselineProfiles/1/: composeApp-release.dm
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: CMakeLists.txt  whisper_jni.cpp
composeApp/src/androidMain/kotlin/com/liftley/vodrop/: MainActivity.kt  Platform.android.kt  VoDropApplication.kt
composeApp/src/androidMain/kotlin/com/liftley/vodrop/audio/: AudioRecorder.android.kt
composeApp/src/androidMain/kotlin/com/liftley/vodrop/auth/: AccessManager.kt  FirebaseAuthManager.kt  PlatformAuth.android.kt  SubscriptionManager.android.kt
composeApp/src/androidMain/kotlin/com/liftley/vodrop/di/: DatabaseDriverFactory.android.kt  PlatformModule.android.kt
composeApp/src/androidMain/kotlin/com/liftley/vodrop/llm/: GeminiCleanupService.android.kt
composeApp/src/androidMain/kotlin/com/liftley/vodrop/service/: RecordingCommandReceiver.kt  RecordingService.kt  ServiceController.android.kt
composeApp/src/androidMain/kotlin/com/liftley/vodrop/stt/: ModelManager.android.kt  SpeechToTextEngine.android.kt  WhisperJni.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/com/liftley/vodrop/: App.kt  Greeting.kt  Platform.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/audio/: AudioRecorder.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/auth/: AccessState.kt  AuthConfig.kt  PlatformAuth.kt  User.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/di/: AppModule.kt  DatabaseDriverFactory.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/llm/: LLMConfig.kt  textCleanupService.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/model/: Transcription.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/repository/: TranscriptionRepository.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/service/: ServiceController.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/settings/: TranscriptionSettings.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/stt/: GroqConfig.kt  GroqWhisperService.kt  ModelManager.kt  SpeechToTextEngine.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/ui/: HistoryScreen.kt  MainScreen.kt  MainViewModel.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/usecase/: RecordAndSaveTranscriptionUseCase.kt
composeApp/src/commonMain/kotlin/com/liftley/vodrop/util/: Constants.kt  DateTimeUtils.kt
composeApp/src/commonMain/sqldelight/com/liftley/vodrop/db/: Transcription.sq
composeApp/src/commonTest/kotlin/com/liftley/vodrop/: ComposeAppCommonTest.kt
composeApp/src/iosMain/kotlin/com/liftley/vodrop/: MainViewController.kt  Platform.ios.kt
composeApp/src/iosMain/kotlin/com/liftley/vodrop/audio/: AudioRecorder.ios.kt
composeApp/src/iosMain/kotlin/com/liftley/vodrop/auth/: PlatformAuth.ios.kt
composeApp/src/jvmMain/kotlin/com/liftley/vodrop/: Platform.jvm.kt  main.kt
composeApp/src/nativeInterop/cinterop/: whisper.def
functions/: package-lock.json  package.json
functions/src/: index.ts
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
(+99 files in other folders)
